--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"bootstrap": "^4.5.0",
+		"bootstrap-icons": "^1.2.2",
 		"moment": "^2.26.0",
 		"oidc-client": "^1.10.1",
 		"react": "^16.13.1",
